[tool.poetry]
name = "knownet"
version = "0.0.1"
description = "Advanced knowledge processing and insights with multi-agent framework for robust  data-driven applications."
authors = ["obonyojimmy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
